# dhtm_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dhtm.dbg  main.cpp
.github/workflows/: build_zmq.yml
dhtm/: CMakeLists.txt  ipcInterface.hpp  zmqConnector.cpp  zmqConnector.hpp
src/: .CMakeLists.txt.swp  CMakeLists.txt  main.cpp
src/com/: .CMakeLists.txt.swp  .comInterface.hpp.swp  .configurationService.hpp.swp  .messageEncoder.cpp.swp  .messageEncoder.hpp.swp  .zmqConnector.cpp.swp  .zmqConnector.hpp.swp  CMakeLists.txt  comHandlerInterface.hpp  comInterface.hpp  configurationService.cpp  configurationService.hpp  messageEncoder.cpp  messageEncoder.hpp  zmqConnector.cpp  zmqConnector.hpp  zmqSubscriber.hpp
src/dhtm/: CMakeLists.txt  messageEncoder.cpp  messageEncoder.hpp
src/htm/: CMakeLists.txt  htmConstants.hpp  spatialPooler.cpp  spatialPooler.hpp
src/utils/: CMakeLists.txt  itcQueue.hpp  itcTask.cpp  itcTask.hpp  logger.cpp  messageEncoder.cpp  messageEncoder.hpp
test/: CMakeLists.txt  main.cpp
test/com/: messageEncoderTest.cpp
test/dhtm/: messageEncoderTest.cpp  messageEncoderTest.hpp
test/htm/: messageEncoderTest.cpp  messageEncoderTest.hpp
test/utils/: messageEncoderTest.cpp  messageEncoderTest.hpp
utils/: CMakeLists.txt  itcMessage.hpp  itcQueue.cpp  itcQueue.hpp  itcTask.cpp  itcTask.hpp  logger.hpp  messageEncoder.hpp
zmq/: CMakeLists.txt  main.cpp
